through Sprint 0, Lesson 7, Video 4

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,3 +20,9 @@ members = [
     "apps/api",
     "apps/chatbot_ui",
 ]
+
+[dependency-groups]
+dev = [
+    "matplotlib>=3.10.8",
+    "qdrant-client>=1.16.2",
+]
