--- a/env.example
+++ b/env.example
@@ -1,6 +1,7 @@
 OPENAI_API_KEY=
 GOOGLE_API_KEY=
 GROQ_API_KEY=
+COHERE_API_KEY=
 export LANGSMITH_TRACING=true
 export LANGSMITH_ENDPOINT=https://api.smith.langchain.com
 export LANGSMITH_API_KEY=<your-api-key>
