--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,8 @@ members = [
 
 [dependency-groups]
 dev = [
+    "cohere>=5.20.2",
+    "fastembed>=0.7.4",
     "langgraph>=1.0.6",
     "langsmith>=0.6.4",
     "matplotlib>=3.10.8",
