--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "google-genai>=1.57.0",
     "groq>=1.0.0",
     "instructor>=1.14.4",
+    "langgraph>=1.0.6",
     "langsmith>=0.6.4",
     "openai>=2.15.0",
     "pydantic>=2.12.5",
