--- a/apps/api/src/api/agents/prompts/qa_agent.yaml
+++ b/apps/api/src/api/agents/prompts/qa_agent.yaml
@@ -37,6 +37,16 @@ prompts:
         }
     }
 
+    - Get formatted user reviews:
+    {
+        "name": "get_formatted_reviews_context",
+        "arguments": {
+            "query": "Durable.",
+            "item_list": ["123", "456"],
+            "top_k": 5
+        }
+    }
+
     CRITICAL RULES:
     - If tool_calls has values, final_answer MUST be false
     (You cannot call tools and exit the graph in the same response)
