--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,3 +31,36 @@ services:
     volumes:
       - ./qdrant_storage:/qdrant/storage:z
     restart: unless-stopped
+
+  postgres:
+    image: postgres:16-alpine
+    ports:
+      - 5433:5432
+    environment:
+      POSTGRES_DB: langgraph_db
+      POSTGRES_USER: langgraph_user
+      POSTGRES_PASSWORD: langgraph_password
+      PGDATA: /var/lib/postgresql/data/pgdata
+    restart: unless-stopped
+    volumes:
+      - ./postgres_data:/var/lib/postgresql/data
+
+  items_mcp_server:
+    build:
+      context: .
+      dockerfile: apps/items_mcp_server/Dockerfile
+    ports:
+      - 8001:8000
+    env_file:
+      - .env
+    restart: unless-stopped
+
+  reviews_mcp_server:
+    build:
+      context: .
+      dockerfile: apps/reviews_mcp_server/Dockerfile
+    ports:
+      - 8002:8000
+    env_file:
+      - .env
+    restart: unless-stopped
