--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,15 +19,21 @@ dependencies = [
 members = [
     "apps/api",
     "apps/chatbot_ui",
+    "apps/items_mcp_server",
+    "apps/reviews_mcp_server",
 ]
 
 [dependency-groups]
 dev = [
     "cohere>=5.20.2",
     "fastembed>=0.7.4",
+    "fastmcp>=2.14.5",
     "langgraph>=1.0.6",
+    "langgraph-checkpoint-postgres>=3.0.4",
     "langsmith>=0.6.4",
     "matplotlib>=3.10.8",
+    "psycopg-binary>=3.3.2",
+    "psycopg2-binary>=2.9.11",
     "qdrant-client>=1.16.2",
     "ragas>=0.4.3",
 ]
