--- a/apps/api/src/api/agents/prompts/product_qa_agent.yaml
+++ b/apps/api/src/api/agents/prompts/product_qa_agent.yaml
@@ -6,7 +6,7 @@ metadata:
 
 prompts:
 
-  qa_agent: |
+  product_qa_agent: |
 
     You are a shopping assistant that can answer questions about the products in stock.
 
