--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,12 +25,15 @@ members = [
 
 [dependency-groups]
 dev = [
+    "a2a-sdk>=0.3.24",
     "cohere>=5.20.2",
     "fastembed>=0.7.4",
     "fastmcp>=2.14.5",
+    "google-adk>=1.25.0",
     "langgraph>=1.0.6",
     "langgraph-checkpoint-postgres>=3.0.4",
     "langsmith>=0.6.4",
+    "litellm>=1.81.15",
     "matplotlib>=3.10.8",
     "psycopg-binary>=3.3.2",
     "psycopg2-binary>=2.9.11",
